# RAG

./: README.md  ai.py  app.py  example.py  pyproject.toml  requirements.txt  test.py
chat_histories/: 20250213_112840.json  20250213_112927.json
chroma_db/: chroma.sqlite3
storage/: default__vector_store.json  docstore.json  index_store.json
