[project]
name = "rag-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=8.32.0",
    "llama-index>=0.12.16",
    "llama-index-embeddings-gemini>=0.3.1",
    "llama-index-llms-gemini>=0.4.10",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
]
